--- a/UI/menu.html
+++ b/UI/menu.html
@@ -24,68 +24,70 @@
 		 </div>
 		</nav>
 
-		<div id="detailsModal"></div>
+		<div id="detailsModal"></div><br>
 		
-		<h4 style="text-align: right; padding: 0 20px;"><em>Welcome, <a href="#">Customer</a></em></h4>
+			
+		<span style="text-align: right; padding: 0 20px;"><em>Welcome, <a href="#">Customer</a></em></span>
+		<button class="cart-button" id="cartButton">Order Cart <a href="">(2)</a></button>
+
 		<div class="container">
 			<h2>Menu For Today</h2><hr>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Grilled Chicken & Tropical Fruit on Mixed Greens - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Chipotle Chicken Taco Salad - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Grilled Salmon & Mixed Greens on a Tostada - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>
 			<div class="box">
 				<p>Cheese Cake, with Vanilla Ice-cream Topping - &#8358;2,400</p>
 				<img src="./files/lander3.png">
-				<button class="btn" onclick="showDetails()">Details</button>
+				<button class="btn" onclick="makeOrder()">Order</button>
 			</div>	<br><br>
 
-			<button class="submitBtn" id="submitBtn">Get Order</button>
 		</div>
 		
 
