--- a/UI/order.html
+++ b/UI/order.html
@@ -27,18 +27,16 @@
 		
 		
 		<div class="container">
-			<h2 style="text-align: center;">Daily Record</h2><hr>
+			<h2 style="text-align: center;">Orders</h2><hr>
+
 			<div class="panel">
 				<div class="heading">
 					<p>ORDER SUMMARY</p>
 				</div>
-				<div class="panel-body">
-					<div>
-						<p><b>Orders Received</b>: 25</p>
-					</div>
-					<div>
-						<p> <b>Orders Processed</b>: 24 </p>
-					</div>
+				<div class="order-grid">
+					<button class="orders-btn btn-orders">Orders Received <a href="">(25)</a></button>
+					<button class="orders-btn btn-processed">Orders Processed <a href="">(20)</a></button>
+					<button class="orders-btn btn-pending">Orders Pending <a href="">(5)</a></button>
 				</div>
 			</div><hr>
 
