Modify UI for better interaction

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,16 +15,6 @@
 		  <a href="index.html" class="brand">Book-A-Meal</a>
 
 		<div class="right">
-		  <!-- <div class="dropdown">
-		    <button class="dropbtn">Caterer 
-		    </button>
-		    <div class="dropdown-content">
-		      <a href="set-menu.html">Set Menu</a>
-		      <a href="edit-menu.html">Edit Menu</a>
-		      <a href="order.html">Order Summary</a>
-		    </div>
-		  </div> -->
-		  <!-- <a href="menu.html">Menu</a> -->
 		  <a href="sign-up.html">Sign Up</a>
 		  <a href="login.html">Login</a>
 		 </div>
@@ -33,7 +23,7 @@
 		
 		
 		<div class="lander"><br><br><br>
-			<h1>Welcome to Best Meal Bookers <br><br>
+			<h1>Welcome Book-A-Meal <br><br>
 				<span>...We get your Order ...Always on time</span>
 			</h1><br><br><br><br><br><br><br><br>
 			<a href="sign-up.html" class="insight" style="text-align: center;"><span>Register with Us</span></a>
