UI fixes based on feedback

--- a/UI/login.html
+++ b/UI/login.html
@@ -25,35 +25,15 @@
 			<!-- BODY -->
 			<div class="login-page">
 
-				<div class="tab">
-					<button class="tablinks" onclick="openForm(event, 'customer')" id="defaultOpen">Customer</button>
-					<button class="tablinks" onclick="openForm(event, 'caterer')">Caterer</button>
-				</div>
-
-				<div id="customer" class="login-box">
+				<div class="login-box">
 					<br>
-					<h3>Login as Customer</h3>
+					<h3>Login Here</h3>
 					<form action="">						
-						<input type="text" name="" placeholder="Enter email address">
+						<input type="text" name="" placeholder="Enter ID">
 
 						<input type="password" name="" placeholder="Enter password">
 
-						<a href="menu.html">Login</a><br><br><br>
-
-						<p>Don't have an account? <a href="sign-up.html">Sign up</a></p>
-
-					</form>
-				</div>
-
-				<div id="caterer" class="login-box">
-					<br>
-					<h3>Login as Caterer</h3>
-					<form action="">						
-						<input type="text" name="" placeholder="Enter email address">
-
-						<input type="password" name="" placeholder="Enter password">
-
-						<a href="set-menu.html">Login</a><br><br><br>
+						<a id="getAccess"> Login </a><br><br><br>
 
 						<p>Don't have an account? <a href="sign-up.html">Sign up</a></p>
 
