--- a/UI/menu.html
+++ b/UI/menu.html
@@ -25,10 +25,11 @@
 		</nav>
 
 		<br>
-		
-			
-		<span style="text-align: right; padding: 0 20px;"><em>Welcome, <a href="#">Customer</a></em></span>
-		<button class="cart-button" id="cartButton">Order Cart <a href="">(2)</a></button>
+		 
+		<div class="top-div">
+			<span style="margin-right: 20px;"><em>Welcome, <a href="#">Customer</a></em></span>
+			<button class="cart-button" id="cartButton">Order Cart <a href="">(2)</a></button>
+		</div>	
 
 		<div class="container">
 			<h2>Menu For Today</h2><hr>
