integrate with sequelize and postgres

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-		
+
 
 		<nav id="navBar" class="nav-bar">
 
@@ -20,13 +20,15 @@
 		 </div>
 		</nav>
 
-		
-		
-		<div class="lander"><br><br><br>
-			<h1>Welcome Book-A-Meal <br><br>
-				<span>...We get your Order ...Always on time</span>
-			</h1><br><br><br><br><br><br><br><br>
-			<a href="sign-up.html" class="insight" style="text-align: center;"><span>Register with Us</span></a>
+
+
+		<div class="lander">
+			<div>
+				<h1>Welcome Book-A-Meal <br><br>
+					<span>...We get your Order ...Always on time</span>
+				</h1>
+				<a href="sign-up.html" class="insight" style="text-align: center;"><span>Register with Us</span></a>
+			</div>
 		</div>
 
 		<!-- FOOTER -->
