--- a/UI/login.html
+++ b/UI/login.html
@@ -29,9 +29,9 @@
 					<br>
 					<h3>Login Here</h3>
 					<form action="">						
-						<input type="text" name="" placeholder="Enter ID">
+						<input type="email" id="userOption" name="" placeholder="Email" required>
 
-						<input type="password" name="" placeholder="Enter password">
+						<input type="password" name="" placeholder="Enter password" required>
 
 						<a id="getAccess"> Login </a><br><br><br>
 
