--- a/UI/order.html
+++ b/UI/order.html
@@ -11,24 +11,19 @@
     <body>
 
 		<nav id="navBar" class="nav-bar">
-
-		  	<a href="index.html" class="brand">Book-A-Meal</a>
-		<div class="right">
-		    <a href="set-menu.html">Set Menu</a>
-		    <a href="edit-menu.html">Edit Menu</a>
-		    <a href="order.html" class="active">Order Summary</a>
-		    
-			<a href="index.html">Logout</a>
-			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="toggleMenu()">&#9776;</a>
-		</div>
-		 
+		  <a href="index.html" class="brand">Book-A-Meal</a>
+			<div class="right">	    
+				<a href="index.html">Logout</a>
+			</div>	 
 		</nav>
 
 		
 		
 		<div class="container">
-			<h2 style="text-align: center;">Orders</h2><hr>
-
+			<div class="top-div">				
+				<button style="float: left" id="toDashboard"> << dashboard </button>
+				<p style="text-align: center; font-size: 1.2em;">Orders</p>
+			</div> <br> <hr>
 			
 				
 					<p style="text-align: center; font-weight: bold;">ORDER SUMMARY</p>
