--- a/UI/set-menu.html
+++ b/UI/set-menu.html
@@ -12,20 +12,17 @@
 		<nav id="navBar" class="nav-bar">
 		  	<a href="index.html" class="brand">Book-A-Meal</a>
 
-		 <div class="right">
-		    <a href="set-menu.html" class="active">Set Menu</a>
-		    <a href="edit-menu.html">Edit Menu</a>
-		    <a href="order.html">Order Summary</a>
-		  	<a href="index.html">Logout</a>
-		  	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="toggleMenu()">&#9776;</a>
-		</div>		 
+		 	<div class="right">
+		  		<a href="index.html">Logout</a>
+			</div>		 
 		</nav>
 		
-		<h4 style="text-align: right; padding: 0 20px;"><em>Welcome, <a href="#">Caterer</a></em></h4>
-		<div class="container">
-			<div>				
-				<h1>Set Menu for the day</h1>
-			</div><hr>
+		<div class="container"><hr>
+			<div class="top-div">				
+				<button style="float: left" id="toDashboard"> << dashboard </button>
+				<span style="text-align: center;">Set Menu for the day</span>
+				<button style="float: right" id="toMenu"> view menu >> </button>
+			</div> <br> <hr>
 
 			<section class="grid-show">
 				<div class="box">
